@@ -4,6 +4,8 @@ debci (0.7) UNRELEASED; urgency=medium
   * debci-generate-feeds: allow generating feeds for specific packages
   * debci-generate-index: update package feed right away when indexing
     individual packages
+  * debian-status: avoid generating invalid JSON in the presence of packages
+    without status files
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 16 May 2014 12:55:41 -0300
 
